Cabal-Version:      2.4
Name:               custodial-nft-org
Version:            0.1.0.0
Author:              Russel Que
Maintainer:          russel.que@gmail.com
Build-Type:          Simple
Copyright:           
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     NftMintFactory
                     , CustodialAssetManager
                     , Utils
                    
                     
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
                     , cardano-crypto-class
                     , cardano-ledger-core

  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable token-policy
  main-is: token-policy.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , custodial-nft-org

executable token-name
  main-is: token-name.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , custodial-nft-org

executable write-datum
  main-is: write-datum.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , custodial-nft-org

executable custodial-script
  main-is: custodial-script.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , custodial-nft-org
